--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ body {
   padding: 5%;
 }
 
+#mode {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
 header .header__content {
   display: flex;
   justify-content: space-evenly;
@@ -78,6 +84,11 @@ header .header__text p {
   margin-top: 50px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.career .skills .skills__item {
+  min-width: 140px;
 }
 .career .skills .skills__item .skills__title {
   font-size: 22px;
