--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,12 @@ body {
     padding: 5%;
 }
 
+#mode {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
 header {
     // padding: 100px;
     .header__content {
@@ -88,7 +94,10 @@ header {
         display: flex;
         // gap: 200px;
         justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 20px;
         .skills__item {
+            min-width: 140px;
             .skills__title {
                 font-size: 22px;
                 color: #474747;
