--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   transition: 0.5s;
 }
 
+.all_content {
+  position: relative;
+}
+
 #mode {
   width: 30px;
   height: 30px;
@@ -18,6 +22,10 @@ body {
   transition: 0.5s;
   background-color: #fff;
   border-radius: 50%;
+  border: none;
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 
 header .header__content {
@@ -120,5 +128,9 @@ header .header__text p {
   }
   header .header__content .header__text {
     width: unset;
+  }
+  #mode {
+    right: 0;
+    top: 0;
   }
 }/*# sourceMappingURL=style.css.map */
