--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,7 @@ header {
         width: 265px;
         height: 270px;
         background-color: black;
+        border-radius: 10px;
     img {
         width: 265px;
         height: 270px;
