--- a/css/style.css
+++ b/css/style.css
@@ -35,22 +35,26 @@ header .header__content {
   flex-wrap: wrap;
 }
 header .header__photo {
-  width: 265px;
-  height: 270px;
-  background-color: transparent;
+  width: 305px;
+  height: 315px;
+  background-color: black;
+  border-radius: 10px;
 }
 header .header__photo img {
-  width: 265px;
-  height: 270px;
+  width: 305px;
+  height: 315px;
 }
 header .header__text {
   width: 50%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 header .header__text span {
   color: #474747;
+}
+header .header__text h3 {
+  margin: 15px 0 0 0;
 }
 header .header__text p {
   font-weight: 400;
