--- a/css/style.scss
+++ b/css/style.scss
@@ -40,13 +40,13 @@ header {
         flex-wrap: wrap;
     }
     .header__photo {
-        width: 265px;
-        height: 270px;
+        width: 305px;
+        height: 315px;
         background-color: black;
         border-radius: 10px;
     img {
-        width: 265px;
-        height: 270px;
+        width: 305px;
+        height: 315px;
     }
     }
 
@@ -54,9 +54,12 @@ header {
         width: 50%;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
         span {
             color: #474747;
+        }
+        h3 {
+            margin: 15px 0 0 0;
         }
         p {
             font-weight: 400;
